--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,16 @@
 {
 	"require-dev": {
-		"wp-coding-standards/wpcs": "^2.3",
+		"wp-coding-standards/wpcs": "^3.3",
 		"phpcompatibility/phpcompatibility-wp": "^2.1",
-		"dealerdirect/phpcodesniffer-composer-installer": "^1.0",
-		"php-stubs/wordpress-stubs": "^6.3",
-		"php-stubs/wordpress-tests-stubs": "^6.3",
-		"spatie/phpunit-watcher": "^1.23",
-		"yoast/phpunit-polyfills": "^1.1",
-		"sirbrillig/phpcs-variable-analysis": "^2.11",
-		"wp-cli/i18n-command": "^2.4",
-		"php-parallel-lint/php-parallel-lint": "^1.3"
+		"dealerdirect/phpcodesniffer-composer-installer": "^1.2",
+		"php-stubs/wordpress-stubs": "^6.9",
+		"php-stubs/wordpress-tests-stubs": "^6.8",
+		"spatie/phpunit-watcher": "^1.24",
+		"symfony/process": "^6.4",
+		"yoast/phpunit-polyfills": "^4.0",
+		"sirbrillig/phpcs-variable-analysis": "^2.13",
+		"wp-cli/i18n-command": "^2.6",
+		"php-parallel-lint/php-parallel-lint": "^1.4"
 	},
 	"scripts": {
 		"lint": "phpcs --standard=phpcs.xml.dist",
@@ -19,6 +20,9 @@
 		"wp": "\"vendor/wp-cli/wp-cli/bin/wp\""
 	},
 	"config": {
-		"allow-plugins": true
+		"allow-plugins": true,
+		"platform": {
+			"php": "8.1.0"
+		}
 	}
 }
